Bug 1726364 - Scroll events stop working after synchronous XHR request while scrolling an iframe, r=edgar

I tried to keep the changes minimal in this case.
We may need some more changes to Document::UnsuppressEventHandlingAndFireEvents to make it work
well with Fission (but that Fission work is totally unrelated to this fix).

Differential Revision: https://phabricator.services.mozilla.com/D123389